[metadata]
name = zaza
summary = Provides test automation for Openstack Charms
version = 0.0.2.dev1
description-file =
    README.rst
author = Chris MacNaughton and others (see CONTRIBUTORS.rst)
author-email = chris.macnaughton@canonical.com
url = https://github.com/openstack-charmers/zaza
classifier =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Topic :: System
    Topic :: System :: Installation/Setup
    opic :: System :: Software Distribution
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    License :: OSI Approved :: Apache Software License


[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = zaza/locale
domain = zaza

[update_catalog]
domain = zaza
output_dir = zaza/locale
input_file = zaza/locale/zaza.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = zaza/locale/zaza.pot

[nosetests]
nologcapture=1
